safari spacing fix for fun page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -200,7 +200,6 @@ body {
 }
 
 .layout-wrapper {
-  display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: space-between;
